k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-microservices
  labels:
    name: ecommerce-microservices
    app: nestjs-ecommerce
